kafka/kafka_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  selector:
    app: kafka
  clusterIP: None
  ports:
  - port: 9092
    targetPort: 9092
