kafka/zookeeper_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: zookeeper
  name: zookeeper
  namespace: kafka
spec:
  ports:
  - name: "2181"
    port: 2181
    targetPort: 2181
  selector:
    service: zookeeper
