kafka/kafka_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network
  namespace: kafka
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          network/kafka-network: "true"
  podSelector:
    matchLabels:
      network/kafka-network: "true"
